--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Git clone our repo
         uses: actions/checkout@v2
 
+      - name: Install ZIP
+        run: sudo apt install zip
+      
       - name: Create ZIP deployment package
         run: zip - r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
