--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
-  PACKAGE-S3-BUCKET_AME : "myproject1-aplication-packages"
+  PACKAGE_S3_BUCKET_NAME : "myproject1-aplication-packages"
   APPLICATION_NAME      : "Myproject1"
   ENVIRONMENT_NAME      : "Myproject1-env"
   DEPLOY_PACKAGE_NAME   : "Myproject1_app_${{ github.sha }}.zip"
@@ -22,3 +22,16 @@ jobs:
       
       - name: Create ZIP deployment package
         run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+        
+      - name: Configure my AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id      : ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-accesss-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region             : ${{ env.AWS_REGION_NAME }}
+          
+      - name: Copy Deployment to S3 bucket
+        run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.PACKAGE_S3_BUCKET_NAME }}/
+        
+      - name: Print Message for CI finish
+        run : echo "CI Pipeline part finished successfully!" 
