--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@
 name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
   PACKAGE_S3_BUCKET_NAME : "myproject1-aplication-packages"
-  APPLICATION_NAME      : "Myproject1"
-  ENVIRONMENT_NAME      : "Myproject1-env"
-  DEPLOY_PACKAGE_NAME   : "Myproject1_app_${{ github.sha }}.zip"
-  AWS_REGION_NAME       : "eu-north-1"
+  APPLICATION_NAME       : "Myproject1"
+  ENVIRONMENT_NAME       : "Myproject1-env"
+  DEPLOY_PACKAGE_NAME    : "Myproject1_app_${{ github.sha }}.zip"
+  AWS_REGION_NAME        : "eu-north-1"
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with: 
           aws-access-key-id      : ${{ secrets.MY_AWS_ACCESS_KEY }}
-          aws-secret-accesss-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
           aws-region             : ${{ env.AWS_REGION_NAME }}
           
       - name: Copy Deployment to S3 bucket
