--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,34 @@ jobs:
         
       - name: Print Message for CI finish
         run : echo "CI Pipeline part finished successfully!" 
+
+
+  my-cd-part:
+    runs-on: ubuntu-latest
+    needs  : [my-ci-part] 
+
+    steps:
+      - name: Configure my AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id      : ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-access-key  : ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region             : ${{ env.AWS_REGION_NAME }}
+          
+      - name: Create new ElasticBeanstalk Application 
+        run : |
+          aws elasticbeanstalk create-application-version \
+          --application-name ${{ env.APPLICATION_NAME }} \
+          --source-bundle S3Bucket="${{ env.PACKAGE_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
+          --version-label "Version-${{ github.sha }}" \
+          --description "CommitSHA-${{ github.sha }}"
+          
+      - name: Deploy new ElasticBeanstalk Application Version
+        run : aws elasticbeanstalk update-environment --environment-name ${{ env.ENVIRONMENT_NAME }} -- version-label "Version-${{ github.sha }}"
+          
+      - name: Print Message for CD finish
+        run : echo "CD Pipeline part finished successfully!" 
+    
+          
+          
+          
