--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,13 @@ jobs:
           aws-region             : ${{ env.AWS_REGION_NAME }}
           
       - name: Copy zip to folder on EC2 instance 
-        run : aws s3 cp s3://${{ env.PACKAGE_S3_BUCKET_NAME }}/${{ env.DEPLOY_PACKAGE_NAME }} ~/${{ env.PACKAGE_S3_BUCKET_NAME }}/
+        run : aws s3 cp s3://${{ env.PACKAGE_S3_BUCKET_NAME }}/${{ env.DEPLOY_PACKAGE_NAME }} /home/ubuntu/${{ env.PACKAGE_S3_BUCKET_NAME }}/
           
       - name: Unzip application file
-        run : unzip ~/${{ env.PACKAGE_S3_BUCKET_NAME }}/${{ env.DEPLOY_PACKAGE_NAME }} ~/${{ env.PACKAGE_S3_BUCKET_NAME }}/Myproject1_app_${{ github.sha }}/
+        run : unzip /home/ubuntu/${{ env.PACKAGE_S3_BUCKET_NAME }}/${{ env.DEPLOY_PACKAGE_NAME }} /home/ubuntu/${{ env.PACKAGE_S3_BUCKET_NAME }}/Myproject1_app_${{ github.sha }}/
       
       - name: Create Doker image
-        run : docker build -t Myproject1_app_${{ github.sha }}:v.1 ~/Myproject1_app_${{ github.sha }}
+        run : docker build -t Myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/${{ env.PACKAGE_S3_BUCKET_NAME }}/Myproject1_app_${{ github.sha }}/
                 
       - name: Run Doker container
         run : docker run -d -p 7777:80 Myproject1_app_${{ github.sha }}:v1 
