--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
           key: ${{ secrets.MY_SSH_PRIVATE_KEY }}
           port: ${{ secrets.MY_SSH_PORT }}
           script: |
-            cp ./  /home/ubuntu/Myproject1_app_${{ github.sha }}/
-            docker build -t Myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/Myproject1_app_${{ github.sha }}/
-            docker run -d -p 7777:80 Myproject1_app_${{ github.sha }}:v1 
+            cp -r ./  /home/ubuntu/myproject1_app_${{ github.sha }}/
+            docker build -t myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/myproject1_app_${{ github.sha }}/
+            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v1 
              
       - name: Print Message for CD finish
         run : echo "CD Pipeline part finished successfully!!!" 
