--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,7 @@ jobs:
   my-ci-part:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Git clone our repo
-        uses: actions/checkout@v2
-      
-      - name: Create ZIP deployment package
-        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
-      
+    steps:   
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
@@ -31,10 +25,12 @@ jobs:
           key: ${{ secrets.MY_SSH_PRIVATE_KEY }}
           port: ${{ secrets.MY_SSH_PORT }}
           script: |
-            cp ${{ env.DEPLOY_PACKAGE_NAME }}  /home/ubuntu/myproject1_app_${{ github.sha }}/
-            unzip /home/ubuntu/myproject1_app_${{ github.sha }}/${{ env.DEPLOY_PACKAGE_NAME }} /home/ubuntu/myproject1_app_${{ github.sha }}/
-            docker build -t myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/myproject1_app_${{ github.sha }}/
-            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v1 
+            pwd
+            ls -la
+#            cp ${{ env.DEPLOY_PACKAGE_NAME }}  /home/ubuntu/myproject1_app_${{ github.sha }}/
+#           unzip /home/ubuntu/myproject1_app_${{ github.sha }}/${{ env.DEPLOY_PACKAGE_NAME }} /home/ubuntu/myproject1_app_${{ github.sha }}/
+#            docker build -t myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/myproject1_app_${{ github.sha }}/
+#            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v1 
              
       - name: Print Message for CD finish
         run : echo "CD Pipeline part finished successfully!!!" 
