--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
           script: |
             mkdir ${{ env.APPLICATION_NAME }}
             cd ${{ env.APPLICATION_NAME }}
-            git clone git@github.com:Stat-Alex/myproject1.git myproject_app_v.${{ github.sha }}
-            docker build -t myproject1_app_${{ github.sha }}:v.1 /home/ubuntu/${{ env.APPLICATION_NAME }}/myproject1_app_${{ github.sha }}/
+            git clone git@github.com:Stat-Alex/myproject1.git myproject_app_v.1
+            docker build -t myproject1_app:v.1 /home/ubuntu/${{ env.APPLICATION_NAME }}/myproject1_app_v.1/
 #            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v1 
              
       - name: Print Message for CD finish
