--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,8 @@
 
 name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
-  PACKAGE_S3_BUCKET_NAME : "myproject1-aplication-packages"
   APPLICATION_NAME       : "myproject1_${{ github.sha }}"
-  ENVIRONMENT_NAME       : "Myproject1-env"
-  DEPLOY_PACKAGE_NAME    : "Myproject1_app_${{ github.sha }}.zip"
-  AWS_REGION_NAME        : "eu-north-1"
-
+  
 on:
   push:
     branches: [ main ]
@@ -29,8 +25,8 @@ jobs:
             cd ${{ env.APPLICATION_NAME }}
             git clone git@github.com:Stat-Alex/myproject1.git myproject_application
             cd myproject_application
-            docker build -t myproject_app:ver.1 .
-#            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v1 
+            docker build -t myproject_app_${{ github.sha }}:v.1 .
+            docker run -d -p 7777:80 myproject1_app_${{ github.sha }}:v.1 
              
       - name: Print Message for CD finish
         run : echo "CD Pipeline part finished successfully!!!" 
