--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
             docker run -d -p 7777:80 myproject_app_${{ github.sha }}:v.1 
              
       - name: Print Message for CD finish
-        run : echo "CD Pipeline part finished successfully!!!" 
+        run : echo "CD Pipeline part finished successfully!" 
         
